--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ NODE_ENV=production
 JWT_WB=Токен сотрудника ВБ
 
 # id таблицы находится в ее url между .../d/id_sheet/...
-GOOGLE_ID=id таблицы 
+GOOGLE_ID=id таблиц (перечислять через запятую)
 
 # об этом пункте подробнее ниже
 GOOGLE_SERVICE_ACCOUNT_EMAIL=email service
